--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <link rel="stylesheet" href="estilo.css">
     <title>Entrega de GIT y GITHUB</title>
 </head>
 <body>
     <header>
-        <h1>Entrega de GIT y GITHUB</h1>
+        <h1 class="animate__animated animate__bounce">Entrega de GIT y GITHUB</h1>
     </header>
     <div class="padre">
-        <div class="hijo header"><h2>HEADER</h2></div>
-        <div class="hijo prodserv" ><h2>PRODUCTO Y SERVICIO</h2></div>
-        <div class="hijo extras"><h2>EXTRAS</h2></div>
-        <div class="hijo aside"><h2>ASIDE</h2></div>
-        <div class="hijo footer"><h2>FOOTER</h2></div>
+        <div class="hijo header animate__heartBeat"><h2>HEADER</h2></div>
+        <div class="hijo prodserv animate__backInLeft" ><h2>PRODUCTO Y SERVICIO</h2></div>
+        <div class="hijo extras animate__wobble"><h2>EXTRAS</h2></div>
+        <div class="hijo aside animate__bounceInRight"><h2>ASIDE</h2></div>
+        <div class="hijo footer animate__backInUp"><h2>FOOTER</h2></div>
     </div> 
 </body>
 </html>
